# ChangeLog for dev-python/cmd2
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/cmd2/ChangeLog,v 1.11 2015/06/07 19:19:10 jlec Exp $

  07 Jun 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
  Add bitbucket to remote-id in metadata.xml

  03 Jun 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
  Add pypi to remote-id in metadata.xml

  08 Apr 2015; Michał Górny <mgorny@gentoo.org> cmd2-0.6.4-r1.ebuild,
  cmd2-0.6.6.1.ebuild, cmd2-0.6.7.ebuild:
  Drop old Python implementations

  24 Nov 2014; Pacho Ramos <pacho@gentoo.org> cmd2-0.6.7.ebuild:
  Support python 3.4

  31 Mar 2014; Michał Górny <mgorny@gentoo.org> cmd2-0.6.4-r1.ebuild,
  cmd2-0.6.6.1.ebuild, cmd2-0.6.7.ebuild:
  Add support for the new PyPy slotting.

  19 Mar 2014; Sébastien Fabbro <bicatali@gentoo.org> cmd2-0.6.7.ebuild:
  Keyword amd64-linux and x86-linux

  14 Jan 2014; Agostino Sarubbo <ago@gentoo.org> cmd2-0.6.7.ebuild:
  Stable for x86, wrt bug #495578

  12 Jan 2014; Pacho Ramos <pacho@gentoo.org> cmd2-0.6.7.ebuild:
  amd64 stable, bug #495578

*cmd2-0.6.7 (23 Oct 2013)

  23 Oct 2013; Matthew Thode <prometheanfire@gentoo.org> +cmd2-0.6.7.ebuild:
  update of cmd2 (yay better pyparsing)

*cmd2-0.6.4-r1 (12 Sep 2013)
*cmd2-0.6.6.1 (12 Sep 2013)

  12 Sep 2013; Michał Górny <mgorny@gentoo.org> +cmd2-0.6.4-r1.ebuild,
  +cmd2-0.6.6.1.ebuild, -cmd2-0.6.4.ebuild:
  Fix the dependencies and supported implementations. Enable tests. Update
  HOMEPAGE. Also, bump to the new version that supports py3.

*cmd2-0.6.4 (26 Jan 2013)

  26 Jan 2013; Matthew Thode <prometheanfire@gentoo.org> +cmd2-0.6.4.ebuild,
  +metadata.xml:
  initial add of cmd2 for cliff for python-quantumclient