@@ -1,30 +1,18 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
-DIST cmd2-0.6.4.tar.gz 21147 SHA256 ff52cb800d931bbd0ce4b05bac0b024cf34ec3a04f66eadcb7d3f7dda42429ba SHA512 3c5c043c6ff1249a7804a6c1be67101e4bb236e3be86a642df0b0fe89601935100a7e2a3ba9c43d55be1019103546df98347ca98fa3003aa62e4fdeaf6586607 WHIRLPOOL 1a2a9597ec675afdacd294112021b472c035af48d2cdc12fe734ad1c858c9327001155426b51c7ab1916f8748e6a1adc1b2944cfe78f7083cd08601748fa5337
-DIST cmd2-0.6.6.1.tar.gz 20538 SHA256 0b051e6b5f4500f823f996c77991363fe1d5c0b790002eb9922c7b39921cd981 SHA512 f1369ec748079eb2adb02805ad35cc18d2e6e708362e8cb0f0a1ab5efcbf49ec55ded3fecd47974f91b8d72000a236b90427f717c104d666380aadb83b86b47c WHIRLPOOL b6ccece6897567d41fc31d68406ab2ad2ff3ff9abbf5d5a014f9c781790f5196c11fa654cd0c71e6e84b79bfafe729cefd93a41c54bca8ca18580ae39e96bd95
 DIST cmd2-0.6.7.tar.gz 20558 SHA256 8e98c7a1cfd106183559240b269e7cd9fe97e8342b5c05295f591aab6fd2f4f0 SHA512 a37393bd9ef6c3ece02249b5a4293a25889ebd68120ee592d2ccd77a8e3e4ab3ba724e0be7f3c98a453dbba30c1851c7f690fbe69711df8a723545f8dbe38607 WHIRLPOOL 9da375c5ab0e1cd0f13e67b1b168b5f87be7f56bc758589b1e41959f3e14b07ad1e055fc2fce6d44ded77f806217b6bbe590009fec27c9179922ea764db0b86d
-EBUILD cmd2-0.6.4-r1.ebuild 696 SHA256 73ece361357bbd5e54584ca6b498084caaf26ba739925eddc30f85617452a50f SHA512 9dcbde9b20c281e5f6643841e3c60d2bf79bef3553230c41e05eaf3f2dda57fc3a187399aad21fc3bd9dd7de455a14561e9f24400ed0ceb9cb88a138abd006ef WHIRLPOOL 3eb0d351bef23d43394004992768a9ba624e3ab177d3af38838bbee78078ec520065f6ee856bbb5c9a3b9e69dd4e9a2857bf51227d41dca895c0b211cf820e8a
-EBUILD cmd2-0.6.6.1.ebuild 935 SHA256 9fbb914fe2493e6d9d9b1d381ba3e4857c8b9a0d4f1e4ab03bc3228026edf906 SHA512 36ccc9bf298d52586f59804932ceb20530b693361bf4bc9c1a54d9aae9eaf3a7bb8d9f512450b4a3afbda4ef6b02c105c4567d3e9df4c61f3df1be19239801d2 WHIRLPOOL 4d6fbde55a672bfde526546f5f37a576b5f0eb0592be1dc328389b1614859e2edfc7aef71c6ff9f6e3454358a2594a5391d408a553202b26291d9232bd3fdc49
+DIST cmd2-0.6.8.tar.gz 21483 SHA256 ac780d8c31fc107bf6b4edcbcea711de4ff776d59d89bb167f8819d2d83764a8 SHA512 d3e284e047f22cecadecba5267c313b18c3d0a25e9bc9267cade7e2dae9b472ea7f468a16f91fa0f9362cff3fae019d56866bd8534f9cf879dfe412a2648a411 WHIRLPOOL 53296e0ef6a9ac1c781926a6b183941a4be117e0887a61518873c7740c0f365435ad4254c53b90c211c35422f11029b2ef9699ef05d7713c768148089d9b4519
 EBUILD cmd2-0.6.7.ebuild 974 SHA256 df7c138334d94a6e137771724dbe72c1f66fc52bb6b4e23cad05be78d7f43de6 SHA512 6def3fa81c4975fa6e4a182b5a4b1b4cd346930427ae5e18f96b6916f9118a9c75f48fbcdfe756c97a87d096961ae34070c670c6945bf408a667a4291b63b225 WHIRLPOOL b14399fe816447e1a82cb68ab264ba653835cc89b31ae0647870c141a4109ae33a30e9405bc8d41d044f722b87cf2a3bc3e64e8b56569299e2b8db495a32ed34
-MISC ChangeLog 1746 SHA256 f98fe1f4250bbbac1cefc054321189ddcb7c964c7ebf64ea6f4b216fbf5a7aa1 SHA512 e3ea213f6bc77a97c60de5f37e49433e6415193066a77d27a0ba81acc8cb9d272915e00aa2ed49954c0cfeaf15b2278bb2260360155fce2e1d0c7827c7b389db WHIRLPOOL dd70551e4ad0290fb7c6b7a9d42632d687efc708926f735280606e0701d7c33a927150c39064171659877d0fe0e437cbe66bdaed0505acb6047f6d3973e611bf
+EBUILD cmd2-0.6.8.ebuild 766 SHA256 5fdafded9f757d2ad33ab2cbda9694fb8e151f77cfee59cd9c7cdd4d8c9e5e2b SHA512 4302dc0dee1939f142c606e695c026ed90de8b5ab3a484ad56ca1e266b1fa54b146fe5e90412c2f074ceef8a9d0be14b0df452079a26be2634c8bef0ec960d15 WHIRLPOOL 7e5fb3df3f59d922d1024edc6f51b3cf9d21e05e6159b19395bec96aa54ad2de10ac8962b205e7c98eee261ee43218d2805d3696c82e7fca08b613fe672a9cfa
+MISC ChangeLog 1907 SHA256 5e6bd89d05a272f8c3e6fbac03a8aff2ee1cc74a7f8d182d6683868d6470013e SHA512 2b864d2b9d62852eec0361f00fafc7de6465ba99719ed3fa8c7da08712be26b9d01eb8e11136b6770106099c8855412426afacc180591fe5f1134919159fbc6e WHIRLPOOL 61b7c898ad4a95a74b7005b04a4338536e07b31c7871fd658a47a38f3e897a8e0e8cfa8a4eb2054994b7717c5bf766e12cd6e3a34a3a4a141d80afe2e1a38d68
 MISC metadata.xml 508 SHA256 3f82d2eab0fb8cba27ded3b6e1ff54d891c82d29260b6d2e840de78f653de692 SHA512 fd85e31a747ff68e0ad547fae83dda1158f1a7f35db92be42d9a63f896b63d8ad0595702e71be162d26adcb25d0306696a25dfccb115f6a2ada5e3e7578ab7ed WHIRLPOOL 9cca0294003f7d9552a097bfc9a8f17fecb83f0b2d84aeb389829d2fe00429a71f037cb0927a7d79d08912cbdfbf1e13f33dff5437bdc42194cbf0b3072926d3
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0
+Version: GnuPG v2.1
 
-iQJ8BAEBCgBmBQJVdJkvXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ0QUU0N0I4NzFERUI0MTJFN0EyODE0NUFF
-OTQwMkE3OUIwMzUyOUEyAAoJEOlAKnmwNSmin3YQAJgZ0+RzUli0DTgXBO9RCh5W
-FZDnbDEjZDbNyF5l6BJzFErphvAuelw+MHp38m8jsipbTXF5UQFO0t9WdFndGKBy
-as7OcvTkwmTsMQ6sElLn5B8N48kYBkvN/Ap9t/aOkaA+6urEUlaR59Q0HnoxMb8Q
-LkbT2CLUUt/9gemJ+mm7nqmDc2H7HqGq/8O6LrgZD2JEqU9JCpQd72UpmQLHK0gZ
-QBNFtEKJp2rI5df9zh6N+OrDugtkMb8RSN99a2zd1T6N+Py07xO4pKwk87mnl8Tx
-MnT5fLiGEDf+MXeRAlxHNSHjLfFIh+I+ZDtBJQ6ZwjmMWk+z2BvZgTbfV0FZ0lZn
-xIvYGyBHpsLJgQI0Eneg8fO9E4D4dhbmzbepTTiqxj6q1L61/VAUHcfQHq9w3JvT
-ECeL1DTpoAm+NcmCw6P34Ifu8hBne1l1JtPU3gbrzEe5lUMyKjnI9CpZaArPm/Ad
-S3kF4dEHqBoYAAOBNEdHWQtBzs6V9JQUeyR5uQ0QX4ZSmGsveoIjeon3v2SmwUtk
-pR4dZJdE9bg5hC7SQSa0IPh2nasGLhCDvgUP7MTKmGU2gnI1Stlrq70aoAS1nqAw
-YlLvYlggVv+JwUOQPq9QGzxmxc1Avy+E3eF5b37nDlbjRH+K+BOudBaQVY37iFB2
-6K54oa9hXgMGS5lX91YN
-=a3nf
+iKYEAREIAGYFAlV1YihfFIAAAAAALgAoaXNzdWVyLWZwckBub3RhdGlvbnMub3Bl
+bnBncC5maWZ0aGhvcnNlbWFuLm5ldDdDQUM1OUY0ODkzMERBREU1NUQ1RjJBRkIy
+OEVDMjEzQjgwNzJCMEQACgkQso7CE7gHKw3JlgCgyvHIWlRHwswXk6jUCdwAe7Sn
+LHUAn0FJHm00LqmRC0GfWu7F/sD7oJTN
+=5BpM
 -----END PGP SIGNATURE-----
