@@ -1,6 +1,12 @@
 # ChangeLog for dev-python/cmd2
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/cmd2/ChangeLog,v 1.11 2015/06/07 19:19:10 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/cmd2/ChangeLog,v 1.12 2015/06/08 09:36:38 idella4 Exp $
+
+*cmd2-0.6.8 (08 Jun 2015)
+
+  08 Jun 2015; Ian Delaney <idella4@gentoo.org> +cmd2-0.6.8.ebuild,
+  -cmd2-0.6.4-r1.ebuild, -cmd2-0.6.6.1.ebuild:
+  bump, rm old
 
   07 Jun 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
   Add bitbucket to remote-id in metadata.xml
